@@ -1384,3 +1384,51 @@ We could try a few things to mitigate this:
   (dohash ((code list) hash-table)
     (setf (gethash code *allocation-point-fixups*)
           (convert-alloc-point-fixups code list))))
+
+;;; Relatively fast checks of where an object resides,
+;;; formerly in sb-introspect.
+
+(in-package "SB-THREAD")
+(export '(heap-allocated-p stack-allocated-p))
+
+;;; Return true if X is in any non-stack GC-managed space.
+;;; (Non-stack implies not TLS nor binding stack)
+;;; This assumes a single contiguous dynamic space, which is of course a
+;;; bad assumption, but nonetheless one that has been true for, say, ~20 years.
+;;; Also note, we don't have to pin X - an object can not move between spaces,
+;;; so a non-nil answer is the definite answer. As to whether the object could
+;;; have moved, or worse, died - by say reusing the same register as held X for
+;;; the value that is (get-lisp-obj-address X), with no surrounding pin or even
+;;; reference to X - then that's your problem.
+;;; If you wanted the object not to die or move, you should have held on tighter!
+(defun heap-allocated-p (x)
+  (let ((addr (get-lisp-obj-address x)))
+    (and (sb-vm:is-lisp-pointer addr)
+         (cond ((< (current-dynamic-space-start) addr
+                   (sb-sys:sap-int (dynamic-space-free-pointer)))
+                :dynamic)
+               ((immobile-space-addr-p addr) :immobile)
+               ((< sb-vm:read-only-space-start addr
+                   (sb-sys:sap-int sb-vm:*read-only-space-free-pointer*))
+                :read-only)
+               ((< sb-vm:static-space-start addr
+                   (sb-sys:sap-int sb-vm:*static-space-free-pointer*))
+                :static)))))
+
+;;; If X is stack-allocated and on the current thread's stack, then return
+;;; the value of *current-thread*. Otherwise, if ALL-THREADS is T, then
+;;; look for X on any stack, returning the thread that contains it.
+;;; If X is not stack-allocated, or allocated on a different thread's stack
+;;; when ALL-THREADS is NIL, then return NIL.
+(defun stack-allocated-p (x &optional all-threads)
+  (let ((a (get-lisp-obj-address x)))
+    (and (sb-vm:is-lisp-pointer a)
+         (cond ((and (<= (get-lisp-obj-address sb-vm:*control-stack-start*) a)
+                     (< a (get-lisp-obj-address sb-vm:*control-stack-end*)))
+                *current-thread*)
+               (all-threads
+                (dolist (thread *all-threads*)
+                  (when (and (thread-alive-p thread)
+                             (<= (thread-control-stack-start thread) a)
+                             (< a (thread-control-stack-end thread)))
+                    (return thread))))))))
