@@ -3,6 +3,9 @@
 changes relative to sbcl-1.4.13:
   * enhancement: attempting to build on openbsd 6.0 or newer without
     the wxallowed mount option now results in a more useful error message.
+  * enhancement: by popular demand, SB-THREAD now exports two functions
+    HEAP-ALLOCATED-P and STACK-ALLOCATED-P to assist in writing debug
+    assertions that objects in hash-tables are not stack-allocated, etc.
 
 changes in sbcl-1.4.13 relative to sbcl-1.4.12:
   * minor incompatible change: PRINT-TYPE and PRINT-TYPE-SPECIFIER are not
